@@ -1,0 +1,4 @@
+package com.inubit.research.server.errors;
+
+public class MultipartInputSizeOverflowException extends Exception {
+}
